Ajoute les sons (déplacement aliens, tir joueur)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
 
+<audio src="assets/audio/invader1.wav"          id="invader1"></audio>
+<audio src="assets/audio/invader2.wav"          id="invader2"></audio>
+<audio src="assets/audio/invader3.wav"          id="invader3"></audio>
+<audio src="assets/audio/invader4.wav"          id="invader4"></audio>
+<audio src="assets/audio/invader_killed.wav"    id="invader_killed"></audio>
+<audio src="assets/audio/shoot.wav"             id="shoot"></audio>
+<audio src="assets/audio/player_death.wav"      id="player_death"></audio>
+
 <canvas id="invaders"></canvas>
 
 <script src="scripts/keyboard.js"></script>
